--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,31 +1,57 @@
 body {
-    text-align: center;
+    background-color: pink;
 } 
 nav {
-    background-color: steelblue;
     padding: 10px;
-} 
-a {
+    text-align: center;
+    font-size: 60px;
     color: white;
+} 
+a:hover { 
+    color: black;
     margin: 40px;
 } 
 h1 {
-    color: steelblue;
+    color: white;
+    text-align: center;
 } 
+h2 {
+    color: white;
+    text-align: center;
+}
+h3 {
+    color: black;
+    font-size: 1.5em;
+    text-align: center;
+}
+h4 {
+    color: white;
+    font-size: 2.5em;
+    text-align: center;
+} 
+h5 {
+    text-align: center;
+    font-size: 1.0em;
+}
 img {
-    width: 800px;
-    border: 4px solid steelblue;
+    display: block;
+    width: 10%; 
+    margin: 0 auto;
 } 
-p{
+footer p{
     padding: 10px;
+    font-size: 14px;
+    margin: 20px auto;
 } 
 footer { 
-    background-color: steelblue; 
-    color: white;
+    color: black;
 } 
-.main-para {
-    font-size: 1.5em;
-    line-height: 1.5em;
+p {
+    line-height: 1.5em;  
+    text-align: center;
+    color: white;
+    font-size: 1.0em;
+
 } 
 #active {
     background-color: white;
