--- a/aboutme/styles/styles.css
+++ b/aboutme/styles/styles.css
@@ -1,19 +1,29 @@
 body {
-    background-color: pink;
+    background-color: white;
 } 
 nav {
-    padding: 10px;
+    padding: 25px;
     text-align: center;
     font-size: 60px;
-    color: white;
+    background-color: black;
 } 
-a:hover { 
-    color: black;
-    margin: 40px;
+a {
+    color: white;
+    padding: 25px;
+} 
+nav a {
+    text-align: center;
+    color: #fcfbfb;
+    text-decoration: none;
+}
+nav a:hover { 
+    background-color: black;
+    color: #d9c2a3;
 } 
 h1 {
     color: white;
     text-align: center;
+    margin: 50px 0;
 } 
 h2 {
     color: white;
@@ -35,16 +45,18 @@ h5 {
 }
 img {
     display: block;
-    width: 10%; 
+    width: 80%; 
     margin: 0 auto;
+    border: 4px solid steelblue;
 } 
-footer p{
-    padding: 10px;
+footer p {
+    padding: 25px;
     font-size: 14px;
     margin: 20px auto;
 } 
 footer { 
-    color: black;
+    background-color: steelblue;
+    color: white;
 } 
 p {
     line-height: 1.5em;  
@@ -56,4 +68,40 @@ p {
 #active {
     background-color: white;
     color: steelblue;
+} 
+#background {
+    height: 725px;
+} 
+header {
+    background-color:rgba(20,30,13, .7);
+} 
+.icon {
+    width: 80px;
+} 
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-auto-rows: minmax(90px, auto);
+    grid-gap:20px;
+} 
+
+.one {
+    grid-column: 1/3;
+    grid-row: 1/3;
+} 
+
+.two {
+    grid-column: 3;
+    grid-row: 1/3;
+}
+
+.three {
+    grid-column: 2/4;
+    grid-row: 3;
+} 
+
+.four {
+    grid-column:1; 
+    grid-row: 2/4;
 }
