--- a/positionstyles.css
+++ b/positionstyles.css
@@ -11,7 +11,8 @@
   width: 100px; 
   height: 100px; 
   background-color: red;
-  grid-column:1/3; 
+  grid-column:1/3;
+  grid-row:1/2; 
 
 } 
 .green1 {
@@ -31,6 +32,7 @@
   height: 100px; 
   background-color: blue; 
   grid-column:1/3;
+  grid-row:4/5; 
 } 
 /* Activity 2 styles */ 
 .content2 {
