--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -6,7 +6,7 @@
 
 
 body {
-    background-color: blue;
+    background-color: #fcfbfb;
     font-family: Raleway, Arial, sans-serif;
     font-size: 22px;
     margin: 0;
