--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,6 +5,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Koulen&family=Lobster&family=Playfair+Display:ital@1&family=Roboto:ital,wght@0,400;1,300&family=Rock+Salt&display=swap');
 
 
+
+
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color:rgba(20,30,13, .7);
+} 
+nav {
+    display: flex;
+    justify-content: space-around;
+} 
+.logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+} 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+} 
+#hero-msg h4 { 
+    color: white;
+          
+} 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10,1fr)
+}
+#hero-img {
+    display: block;
+    width: 100%; 
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}  
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+} 
+#background {
+    height: 725px;
+    background-color: #d9c2a3;
+    grid-column: 1/11;
+    grid-row: 4/9;
+} 
+.mountains { 
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+} 
+.msg {
+    background-color: #6f7364;
+    line-height: 2.5em;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+} 
+.card {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
 body {
     background-color: #fcfbfb;
     font-family: Raleway, Arial, sans-serif;
@@ -14,6 +100,8 @@ body {
 } 
 nav {
     padding: 25px;
+    display:flex;
+    justify-content: space-around;
 } 
 a {
     color: white;
@@ -60,10 +148,10 @@ h3 {
 
 }
 h4 {
-    color: black;
+    color: white;
     font-size: 1.8em;
-    text-align: center;
     font-family: 'Roboto', sans-serif;
+    text-align: center;
 } 
 footer p {
     padding: 25px;
@@ -73,6 +161,11 @@ footer p {
 footer { 
     background-color:rgba(20,30,13, .7);
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 } 
 footer img {
     width:10%;
@@ -88,13 +181,7 @@ p {
     text-align: center; 
     font-family: 'Roboto', sans-serif;
 } 
-#background {
-    height: 725px;
-    background-color: #d9c2a3;
-} 
-header {
-    background-color:rgba(20,30,13, .7);
-} 
+
 .logo{
     width: 80px;
 }
@@ -115,25 +202,21 @@ header {
 } 
 .card{
     display: block;
-    width:20%; 
+    width:100; 
     margin: 0 auto;
     border: 10px solid  #d9c2a3;
     box-sizing: border-box;
 }
 .boat {
     display: block;
-    width:20%; 
+    width:100; 
     margin: 0 auto;
     border: 10px solid  #d9c2a3;
 } 
 .social{
     width: 20%;
 } 
-.msg {
-    color: white;
-    background-color: #6f7364;
-    line-height: 2.5em;
-} 
+
 .msg h2 {
     color: white;
     font-family: 'Playfair Display', serif;
@@ -161,4 +244,6 @@ footer h3 a:hover {
 } 
 main section img {
     box-sizing: border-box;
-}
+} 
+            
+        
