--- a/auditfirm/styles/tyle.css
+++ b/auditfirm/styles/tyle.css
@@ -402,8 +402,22 @@ main section img {
 } 
 .moveDown {
     margin-top: 3em;
-}
-
+} 
+/* Container holding the image and the text */
+.container {
+    position: relative;
+  }
+  
+  /* Bottom right text */
+  .text-block {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: white;
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
 
 @media screen and (max-width: 900px) {
