--- a/auditfirm/styles/tyle.css
+++ b/auditfirm/styles/tyle.css
@@ -115,7 +115,10 @@ nav {
 .card {
     border: 10px solid  #023e8a;
     transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #6f7364; 
+    justify-self: center;
+
+
 }
 .card:hover {
     opacity: .6;
