--- a/auditfirm/styles/site-plan.css
+++ b/auditfirm/styles/site-plan.css
@@ -20,7 +20,7 @@ Fonts are separated by a | */
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: rgba(0, 0, 0, 0.418); /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
+  --paragraph-background-color: #023e8a  ;
   --nav-link-color: #396E94;
   --nav-background-color: #48CAE4;
   --nav-hover-link-color: #48CAE4;
