--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -188,6 +188,7 @@ p {
     font-size: 1.5em;
     text-align: center; 
     font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    text-align: ;
 } 
 
 .logo{
