--- a/scrimba/learnactivity/styles.css
+++ b/scrimba/learnactivity/styles.css
@@ -1,14 +1,3 @@
-.wrap-container {
+.pricing {
     display: flex;
-    justify-content: center;
-}
-
-.item {
-    text-align: center;
-    border: 1px solid black;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    
 }
